<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="2dp"
        android:id="@+id/login_card">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_dark_blue"
            android:orientation="vertical"
            android:padding="30dp"
            android:focusableInTouchMode="true">

            <ImageView android:src="@mipmap/ic_launcher"
                       android:layout_width="72dp"
                       android:layout_height="72dp"
                       android:layout_marginBottom="12dp"
                       android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/auth"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceLoginError"
                app:theme="@style/MaterialLoginTheme.TextAppearanceLogin">

                <EditText
                    android:id="@+id/login_user_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:lines="1"
                    android:hint="@string/login"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceLoginError"
                app:theme="@style/MaterialLoginTheme.TextAppearanceLogin">

                <EditText
                    android:id="@+id/login_pass_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <!--<CheckBox-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/show_password"-->
                <!--android:id="@+id/showPassword"-->
                <!--android:checked="false"-->
                <!--style="@style/MaterialLoginTheme.TextAppearanceLogin"/>-->

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/register_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_send_white_24dp"
        android:tint="@color/color_dark_blue"
        style="@style/floating_action_button"
        app:backgroundTint="@color/color_light_blue"
        app:layout_anchor="@id/login_card"
        app:layout_anchorGravity="bottom|right"/>

    <!--<FrameLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:layout_marginBottom="20dp">-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical">-->

            <!--<ImageView-->
                <!--android:id="@+id/imageViewCopyright"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:maxWidth="300dp"-->
                <!--android:maxHeight="40dp"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:gravity="center"-->
                <!--android:src="@drawable/thales_logo_tr"/>-->

            <!--<TextView-->
                <!--android:id="@+id/textViewCopyright"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/text_copyright"-->
                <!--android:textColor="@color/color_dark_blue"-->
                <!--android:gravity="center"-->
                <!--android:textSize="10sp"/>-->

        <!--</LinearLayout>-->
    <!--</FrameLayout>-->

</android.support.design.widget.CoordinatorLayout>